axum-macros/tests/from_ref/fail/generics.rs
use axum::extract::FromRef;

#[derive(Clone, FromRef)]
struct AppState<T> {
    foo: T,
}

fn main() {}
