axum-macros/tests/from_ref/fail/generics.stderr
error: `#[derive(FromRef)]` doesn't support generics
 --> tests/from_ref/fail/generics.rs:4:16
  |
4 | struct AppState<T> {
  |                ^^^
